<resources>
    <string name="app_name">TestApplication</string>4
    <string name="mobile_number">Mobile Number</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="search_in_indore_madhya_pradesh">Search in indore,Madhya Pradesh</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_details">Show Details</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name : </string>
    <string name="gender">Gender : </string>
    <string name="last_name">"Last Name : "</string>
    <string name="email_">Email : </string>
    <string name="mobile_number_">Mobile Number : </string>
    <string name="date_of_birth_">"Date of Birth : "</string>
</resources>