<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.testapplication.viewmodel.SignUpViewmodel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/back"
                app:tint="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_15sdp"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="First Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="Last Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:padding="@dimen/_6sdp">

                        <EditText
                            android:id="@+id/et_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="First Name"
                            android:imeOptions="actionNext"
                            android:padding="@dimen/_7sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:padding="@dimen/_6sdp">

                        <EditText
                            android:id="@+id/et_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="Last Name"
                            android:imeOptions="actionNext"
                            android:padding="@dimen/_7sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="Male"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="Female"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="Other"
                        android:textSize="@dimen/_12sdp" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_gray"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_7sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_6sdp">


                        <EditText
                            android:id="@+id/et_pass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:padding="@dimen/_7sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/iv_pass"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/pass_see"
                            android:tint="#9E9E9E" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/dark_gray"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_6sdp">

                        <EditText
                            android:id="@+id/et_cnfmpass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:padding="@dimen/_7sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/iv_cnfmpass"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/pass_see"
                            android:tint="#9E9E9E" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/dark_gray"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/et_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@null"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/_7sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/dark_gray"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@null"
                        android:focusable="false"
                        android:hint="@string/date_of_birth"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/_7sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/button_back"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/sign_in"
                        android:textColor="@color/orange" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>